2008-04-25  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (current-frame-manage-window-type): Let the
	user choose what window type the current frame must handle.
	(display-current-window-info): New function.
	(current-frame-manage-all-window-type)
	(current-frame-manage-only-normal-window-type)
	(current-frame-manage-no-window-type): New functions.

	* src/clfswm-internal.lisp (managed-window-p): New function.

	* src/package.lisp (frame): Managed type: new frame
	parameter. This allow to choose what window type a frame must
	handle.

	* src/*.lisp: Rename all 'father' occurrences to 'parent'.

	* src/clfswm-nw-hooks.lisp
	(open-in-new-frame-in-parent-frame-nw-hook): New new window hook.

	* src/clfswm-util.lisp (adapt-current-frame-to-window-hints): New
	function.

	* src/tools.lisp (ensure-printable): Return always a string even
	with a null string.

2008-04-24  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/config.lisp (*default-nw-hook*): New variable to change the
	default new window hook.

2008-04-22  Philippe Brochard  <pbrochard@common-lisp.net>

	* clfswm.asd (clfswm): Add a dependency from
	clfswm-second-mode.lisp to clfswm.lisp.

	* src/clfswm-util.lisp (identify-key): Show the documentation for
	the function bound on a key.
	(with-movement): Move with-movement,
	current-frame-fill/pack/resize-*  from bindings-second-mode.lisp
	to clfswm-util.lisp.

	* src/clfswm-menu.lisp: New menu system that let user change keys
	or functions associated to keys.

2008-04-18  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (show-all-children): Display-child is
	the first child by default. Solve a bug with father-p.

2008-04-17  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (add-frame): Add frame return the
	created frame.
	(show-all-children): Move the size computation outside the
	show-child part.

	* src/bindings-second-mode.lisp (with-movement): Redisplay only